Removing horizontal scroll and fix content width on large viewport.

--- a/app/assets/stylesheets/components/site/_slides.scss
+++ b/app/assets/stylesheets/components/site/_slides.scss
@@ -50,7 +50,7 @@
   }
 
   @media #{$large-up} {
-    max-width: 30rem;
+    min-width: 42vh;
     padding: 0 5rem;
   }
 
